disable-mtls.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: productpage-disable-mtls
  namespace: default
spec:
  host: productpage.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
